force-app/main/default/objects/Tweet__c/Tweet__c.object-meta.xml
<CustomObject>
    <description>A Tweet.</description>
    <label>Tweet</label>
    <nameField>
        <displayFormat>TWT-{0}</displayFormat>
        <label>Tweet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tweets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>