force-app/main/default/objects/Tweet__c/fields/Author_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Display_Name__c</fullName>
    <description>The author&#39;s Display Name</description>
    <inlineHelpText>The author&#39;s Display Name</inlineHelpText>
    <label>Author Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>