force-app/main/default/objects/Tweet__c/fields/Author_Username__c.field-meta.xml
<CustomField>
    <fullName>Author_Username__c</fullName>
    <description>The author&#39;s Username</description>
    <inlineHelpText>The author&#39;s Username</inlineHelpText>
    <label>Author Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>