force-app/main/default/objects/Tweet__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The body of the Tweet.</description>
    <inlineHelpText>The body of the Tweet.</inlineHelpText>
    <label>Body</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>