force-app/main/default/objects/Tweet__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <description>The scoring from Sentiment Analysis of the Tweet</description>
    <inlineHelpText>The scoring from Sentiment Analysis of the Tweet</inlineHelpText>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>