force-app/main/default/objects/Tweet__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The Date &amp; Time the Tweet was posted</description>
    <inlineHelpText>The Date &amp; Time the Tweet was posted</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>